// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default setup 1`] = `
Object {
  "Resources": Object {
    "ApprovalRuleTemplateCustomResource80C1F447": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "ApprovalRuleTemplateName": "name",
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "CustomApprovalRuleTemplateCustomResourceProviderHandlerF71B1878",
            "Arn",
          ],
        },
        "Template": Object {
          "Approvers": Object {
            "NumberOfApprovalsNeeded": 2,
          },
        },
      },
      "Type": "Custom::ApprovalRuleTemplate",
      "UpdateReplacePolicy": "Delete",
    },
    "CustomApprovalRuleTemplateCustomResourceProviderHandlerF71B1878": Object {
      "DependsOn": Array [
        "CustomApprovalRuleTemplateCustomResourceProviderRoleBFA17D2F",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
          },
          "S3Key": "1d69b213d37eb5c0e59a0ec61f56d9931358464544855f4cfac22a3fcb283a77.zip",
        },
        "Handler": "__entrypoint__.handler",
        "MemorySize": 128,
        "Role": Object {
          "Fn::GetAtt": Array [
            "CustomApprovalRuleTemplateCustomResourceProviderRoleBFA17D2F",
            "Arn",
          ],
        },
        "Runtime": "nodejs16.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomApprovalRuleTemplateCustomResourceProviderRoleBFA17D2F": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
        ],
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "codecommit:CreateApprovalRuleTemplate",
                    "codecommit:DeleteApprovalRuleTemplate",
                    "codecommit:GetApprovalRuleTemplate",
                    "codecommit:UpdateApprovalRuleTemplateContent",
                    "codecommit:UpdateApprovalRuleTemplateDescription",
                    "codecommit:UpdateApprovalRuleTemplateName",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "Inline",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
}
`;

exports[`list of approvalPoolMembers 1`] = `
Object {
  "Resources": Object {
    "ApprovalRuleTemplateCustomResource80C1F447": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "ApprovalRuleTemplateName": "name",
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "CustomApprovalRuleTemplateCustomResourceProviderHandlerF71B1878",
            "Arn",
          ],
        },
        "Template": Object {
          "Approvers": Object {
            "ApprovalPoolMembers": Array [
              "arn:aws:sts::123456789012:assumed-role/CodeCommitReview/*",
              "arn:aws:sts::123456789012:assumed-role/LeadDeveloper/*",
            ],
            "NumberOfApprovalsNeeded": 2,
          },
        },
      },
      "Type": "Custom::ApprovalRuleTemplate",
      "UpdateReplacePolicy": "Delete",
    },
    "CustomApprovalRuleTemplateCustomResourceProviderHandlerF71B1878": Object {
      "DependsOn": Array [
        "CustomApprovalRuleTemplateCustomResourceProviderRoleBFA17D2F",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
          },
          "S3Key": "1d69b213d37eb5c0e59a0ec61f56d9931358464544855f4cfac22a3fcb283a77.zip",
        },
        "Handler": "__entrypoint__.handler",
        "MemorySize": 128,
        "Role": Object {
          "Fn::GetAtt": Array [
            "CustomApprovalRuleTemplateCustomResourceProviderRoleBFA17D2F",
            "Arn",
          ],
        },
        "Runtime": "nodejs16.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomApprovalRuleTemplateCustomResourceProviderRoleBFA17D2F": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
        ],
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "codecommit:CreateApprovalRuleTemplate",
                    "codecommit:DeleteApprovalRuleTemplate",
                    "codecommit:GetApprovalRuleTemplate",
                    "codecommit:UpdateApprovalRuleTemplateContent",
                    "codecommit:UpdateApprovalRuleTemplateDescription",
                    "codecommit:UpdateApprovalRuleTemplateName",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "Inline",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
}
`;
